WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293495
Terminate only the web processes using models after the model process has repeatedly crashed
https://bugs.webkit.org/show_bug.cgi?id=293495
Summary
Terminate only the web processes using models after the model process has rep...
Ada Chan
Reported
2025-05-23 10:12:44 PDT
Terminate only the web processes using models after the model process has repeatedly crashed
Attachments
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2025-05-23 10:12:45 PDT
<
rdar://problem/150495867
>
Ada Chan
Comment 2
2025-05-23 10:20:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45841
EWS
Comment 3
2025-05-27 08:10:20 PDT
Committed
295442@main
(8d026d2b3d95): <
https://commits.webkit.org/295442@main
> Reviewed commits have been landed. Closing PR #45841 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug